Fix a tag page jump and prevent submit behavior for nav search box.

--- a/style.css
+++ b/style.css
@@ -335,7 +335,7 @@ a {
 
 .twitterLogo {
   color: #1da1f2;
-  margin-top: 8px;
+  margin: 8px 10% 0 10%;
 }
 
 /*
